# vulcan_salute

./: Cargo.toml  README.md
cmd/: README.md  imageEncodeBase64  logo.jpeg.base64  logo.png.base64
cmd/lychee/: Cargo.toml
cmd/lychee/helloworld/: Cargo.toml
cmd/lychee/helloworld/src/: main.rs
cmd/lychee/helloworld/src/controllers/: index.rs  mod.rs
cmd/lychee/helloworld/templates/: index.html
cmd/lychee/src/: main.rs
cmd/lychee/src/lycli/: mod.rs
cmd/lychee/sss/: Cargo.toml
cmd/lychee/sss/src/: main.rs
examples/: Cargo.toml  cpu.rs
examples/src/: main.rs
src/: issue_linux.rs  lib.rs  util.rs
src/util/: mod.rs
src/util/cpu/: cpu_aarch64.rs  cpu_arm.rs  cpu_mips.rs  cpu_mips64.rs  cpu_powerpc.rs  cpu_sparc.rs  cpu_x86.rs  cpu_x86_64.rs  mod.rs
src/web/: controller.rs  mod.rs  template.rs  web_error.rs
