[package]
name = "vulcan_salute"
version = "0.1.0"
authors = ["sunny <qi.cao@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = "3.0"
actix-http = "2"
actix-web = "3.0"
actix-web-httpauth = "0.3"
actix-cors = "0.2"
actix-service = "1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "1.8.0"

[[example]]
name = "cpu"
path = "./examples/cpu.rs"