[package]
name = "vulcan_test"
version = "0.1.0"
authors = ["sunny <qi.cao@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.vulcan_salute]
git = "https://github.com/sunnyrust/vulcan_salute.git"
branch = "main"
