[package]
name = "lychee"
version = "0.3.0"
authors = ["sunny <jinheking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.20"
serde = { version = "1", features = ["derive"] }
clap = "2.33.0"
libc = "0.2.65"