[package]
name = "helloworld"
version = "0.1.0"
authors = ["sunny <qi.cao@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
tera = "1.8.0"
actix-http = "2"
actix-web = "3"
env_logger = "0.8"

[dependencies.vulcan_salute]
git = "https://github.com/sunnyrust/vulcan_salute.git"
branch = "main"
